src/components/Console/Menu/Menu.module.css
.menu {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    width: fit-content;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    padding: 0.5rem;
    z-index: 5;
}

.menu::before {
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    inset: 0;
    background-color: #363636cb;
    -webkit-backdrop-filter: blur(20px);
    backdrop-filter: blur(20px);
    z-index: -1;
}

.shrink-menu {
    width: fit-content;
}

.shrink {
    width: fit-content;
    place-self: center;
}

.shrink *:first-child {
    margin-right: 0 !important;
}

.bars {
    width: fit-content;
}

.center-bars {
    place-self: center;
}

.bars *:first-child {
    margin: 0 !important;
}

@media screen and (min-width: 46.25em) {
    .menu {
        padding: 1rem;
        position: relative;
        width: 100%;
        z-index: 1;
    }
}

